# qTestable

./: .gitignore  CI.sh  CMakeLists.txt  Rakefile  qTestable.spec
ft/: CMakeLists.txt  common-test.rb  common-test.sh
ft/01_a_simple_button/: CMakeLists.txt  main.cpp  runTest.sh  runTest.sh.in
ft/02_button_with_slot_based_commands/: CMakeLists.txt  Handler.h  main.cpp  runTest.sh
ft/03_using_standard_buttons/: CMakeLists.txt  LabelToButtonConnector.cpp  main.cpp  runTest.sh.in
ft/04_using_designer_and_children/: CMakeLists.txt  Form.h  main.cpp  runTest.sh.in
ft/05_menus/: CMakeLists.txt  Form.cpp  Form.h  Form.ui  runTest.rb.in
ft/install_smoke/: CMakeLists.txt  Form.cpp  Form.ui  Handler.h  LabelToButtonConnector.h  main.cpp  runTest.sh
ft/starter/: CMakeLists.txt  QTestableProxy.cpp  QTestableProxy.h  main.cpp
include/: CMakeLists.txt  FindqTestable.cmake  IQTestableClassHandler.h  QTestable.h  QTestableApplication.h  QTestableAutomationRequest.h  QTestableClassHandler.h  QTestableService.h  StandardHandlers.h  qTestable.pc.in
lib/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Dispatcher.cpp  Dispatcher.h  Helper.cpp  Helper.h  MenuHelper.cpp  MenuHelper.h  ObjectFinder.cpp  ObjectFinder.h  ParseRestRequest.cpp  ParseRestRequest.h  QTestableApplication.cpp  QTestableAutomationRequest.cpp  QTestableClassHandler.cpp  QTestableDBusAdaptor.cpp  QTestableDBusAdaptor.h  QTestableDBusServer.cpp  QTestableDBusServer.h  QTestableService.cpp  StandardHandlers.cpp  common.h  generate_class.sh  generate_dbus_interface.sh  generate_handler.sh  org.qTestable.xml
lib/handlers/: QButtonHandler.cpp  QButtonHandler.h  handler_for_application.h  handler_for_button.h  handler_for_label.h  handler_for_mainWindow.h  handler_for_menu.h  handler_for_menuBar.h
test/: CMakeLists.txt  ConfigParserTest.cpp  DispatcherTest.cpp  HelperTest.cpp  MenuHelperTest.cpp  ObjectFinderTest.cpp  ParseRestRequestTest.cpp  QTestableAutomationRequestTest.cpp  QTestableClassHandlerTest.cpp  SerializerHelperTest.cpp  blah.cpp  generate_test.sh  test_template.cpp
