include_directories(${CMAKE_SOURCE_DIR}/lib ${CMAKE_CURRENT_BINARY_DIR})

macro (do_test arg)
  qt4_generate_moc(${arg}.cpp ${arg}.moc)
  add_executable (${arg} ${arg}.cpp)
  add_custom_target(${arg}.moc SOURCES ${arg}.moc)
  add_dependencies (${arg} ${arg}.moc)
  target_link_libraries(${arg} ${LIBRARIES} qTestable)
  add_test (${arg} ${arg})
endmacro (do_test)

do_test(ConfigParserTest)
do_test(QTestableAutomationRequestTest)
do_test(DispatcherTest)
do_test(QTestableClassHandlerTest)
do_test(ObjectFinderTest)
do_test(MenuHelperTest)
do_test(HelperTest)
